// Vitest Snapshot v1

exports[`Column sort 1`] = `
"<div class=\\"_Container_1df3db _Datatable_c7bb0b\\">
  <table>
    <tr class=\\"\\">
      <!--v-if-->
      <th class=\\"_sortable_c7bb0b\\"><span class=\\"_colName_c7bb0b\\"><span>Name</span><span class=\\"_Icon_db495d material-symbols-outlined _sortIcon_c7bb0b\\">arrow_drop_down</span></span></th>
      <th class=\\"_sortActive_c7bb0b\\"><span class=\\"_colName_c7bb0b\\"><span>Modified</span>
        <!--v-if--></span>
      </th>
    </tr>
    <tr class=\\"\\">
      <!--v-if-->
      <td class=\\"\\" style=\\"\\"></td>
      <td class=\\"\\" style=\\"\\"></td>
    </tr>
    <tr class=\\"\\">
      <!--v-if-->
      <td class=\\"\\" style=\\"\\"></td>
      <td class=\\"\\" style=\\"\\"></td>
    </tr>
    <tr class=\\"\\">
      <!--v-if-->
      <td class=\\"\\" style=\\"\\"></td>
      <td class=\\"\\" style=\\"\\"></td>
    </tr>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </table><span class=\\"_spinner_1df3db\\"><!--v-if--></span>
</div>"
`;

exports[`Selecting rows 1`] = `
"<div class=\\"_Container_1df3db _Datatable_c7bb0b\\">
  <table>
    <tr class=\\"\\">
      <th style=\\"width: 0px;\\"><span class=\\"_Checkbox_d37172 _checked_d37172\\"><span class=\\"_Icon_db495d material-symbols-outlined\\">check_box</span><input type=\\"checkbox\\"></span></th>
      <th class=\\"_sortable_c7bb0b\\"><span class=\\"_colName_c7bb0b\\"><span>Name</span><span class=\\"_Icon_db495d material-symbols-outlined _sortIcon_c7bb0b\\">arrow_drop_down</span></span></th>
      <th class=\\"_sortActive_c7bb0b\\"><span class=\\"_colName_c7bb0b\\"><span>Modified</span>
        <!--v-if--></span>
      </th>
    </tr>
    <tr class=\\"_rowSelected_c7bb0b\\">
      <td><span class=\\"_Checkbox_d37172 _checked_d37172\\"><span class=\\"_Icon_db495d material-symbols-outlined\\">check_box</span><input type=\\"checkbox\\"></span></td>
      <td class=\\"\\" style=\\"\\"></td>
      <td class=\\"\\" style=\\"\\"></td>
    </tr>
    <tr class=\\"_rowSelected_c7bb0b\\">
      <td><span class=\\"_Checkbox_d37172 _checked_d37172\\"><span class=\\"_Icon_db495d material-symbols-outlined\\">check_box</span><input type=\\"checkbox\\"></span></td>
      <td class=\\"\\" style=\\"\\"></td>
      <td class=\\"\\" style=\\"\\"></td>
    </tr>
    <tr class=\\"_rowSelected_c7bb0b\\">
      <td><span class=\\"_Checkbox_d37172 _checked_d37172\\"><span class=\\"_Icon_db495d material-symbols-outlined\\">check_box</span><input type=\\"checkbox\\"></span></td>
      <td class=\\"\\" style=\\"\\"></td>
      <td class=\\"\\" style=\\"\\"></td>
    </tr>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </table><span class=\\"_spinner_1df3db\\"><!--v-if--></span>
</div>"
`;

exports[`Show more 1`] = `
"<div class=\\"_Container_1df3db _Datatable_c7bb0b\\">
  <table>
    <tr class=\\"\\">
      <!--v-if-->
      <th class=\\"_sortable_c7bb0b\\"><span class=\\"_colName_c7bb0b\\"><span>Name</span><span class=\\"_Icon_db495d material-symbols-outlined _sortIcon_c7bb0b\\">arrow_drop_down</span></span></th>
      <th class=\\"_sortActive_c7bb0b\\"><span class=\\"_colName_c7bb0b\\"><span>Modified</span>
        <!--v-if--></span>
      </th>
    </tr>
    <tr class=\\"\\">
      <!--v-if-->
      <td class=\\"\\" style=\\"\\"></td>
      <td class=\\"\\" style=\\"\\"></td>
    </tr>
    <tr class=\\"\\">
      <!--v-if-->
      <td class=\\"\\" style=\\"\\"></td>
      <td class=\\"\\" style=\\"\\"></td>
    </tr>
    <tr class=\\"\\">
      <!--v-if-->
      <td class=\\"\\" style=\\"\\"></td>
      <td class=\\"\\" style=\\"\\"></td>
    </tr>
    <!--v-if-->
    <tr class=\\"_showMore_c7bb0b\\">
      <td colspan=\\"2\\"><button style=\\"--bnt-rgb: 58,134,255;\\" type=\\"button\\" class=\\"_Button_a73d48 _text_a73d48 _loading_a73d48\\">
          <div class=\\"_content_a73d48\\">Show more results</div><svg class=\\"_Spinner_fafe23 _spinner_a73d48\\" viewBox=\\"0 0 18 18\\">
            <path stroke=\\"currentColor\\" fill=\\"none\\" d=\\"M 9 1 A 8 8 0 0 1 17 9\\" stroke-width=\\"2\\"></path>
            <path stroke=\\"currentColor\\" opacity=\\"0.33\\" fill=\\"none\\" d=\\"M 17 9 A 8 8 0 1 1 9 1\\" stroke-width=\\"2\\"></path>
          </svg>
        </button></td>
    </tr>
    <!--v-if-->
  </table><span class=\\"_spinner_1df3db\\"><!--v-if--></span>
</div>"
`;
